# Ecu-Unlock-Tool

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
autoflash/: .gitignore  README.md  capabilities.py  checksum.py  cli.py  connection.py  container.py  demo_virtual.py  ecu_driver.py  memory_map.py  operation_plan.py  requirements.txt  security.py  virtual.py
autoflash/autoflash/: __init__.py  ecu_driver.py  exceptions.py  flasher.py  registry.py
autoflash/autoflash/drivers/: mock.py  simos18.py
autoflash/data/: __init__.py  memory_maps.py
autoflash/drivers/: __init__.py  mock.py  simos18.py
docs/: README.md  architecture_overview.md  bench_hardware_notes.md  driver_capabilities_policy.md  memory_map_database_plan.md  operation_plan_and_dry_run.md  safe_research_roadmap.md  seed_key_provider_plan.md  simos18_readonly_plan.md
tests/: test_checksum_lab.py  test_cli_capabilities.py  test_cli_dry_run.py  test_cli_virtual.py  test_container_lab.py  test_driver_capabilities.py  test_memory_map_database.py  test_operation_plan.py  test_recovery_simulator.py  test_seedkey_provider.py  test_simos18_stub.py  test_virtual_flow.py
