[project]
name = "autoflash"
version = "0.1.0"
description = "Educational ECU flashing framework with a virtual UDS ECU simulator, mock driver, CLI, and pytest regression tests."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Emre Uludasdemir" }
]
dependencies = [
  "python-can>=4.0",
  "can-isotp>=2.0",
  "udsoncan>=1.20"
]

[project.optional-dependencies]
dev = [
  "pytest"
]
